# solana-workspace

./: .gitignore  README.md
anchor-counter/: Anchor.toml
anchor-counter/tests/: anchor-counter.ts
anchor-counter2/: LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json
anchor-counter2/anchor/: Anchor.toml  package.json
anchor-counter2/anchor/src/: anchor-counter2-exports.ts  index.ts
anchor-counter2/anchor/tests/: anchor-counter2.spec.ts
anchor-ping-frontend/: package-lock.json
jogo-do-bicho/: .env.example  README.md  package-lock.json  package.json
jogo-do-bicho/anchor/: Anchor.toml
jogo-do-bicho/anchor/programs/gotcritter/: Cargo.toml
jogo-do-bicho/anchor/programs/gotcritter/src/: lib.rs
jogo-do-bicho/anchor/src/: gotcritter-exports.ts  gotcritter.ts  index.ts
jogo-do-bicho/anchor/tests/: gotcritter.spec.ts
jogo-do-bicho/scripts/: fill-game.ts  game-closer.ts  game-recycler.ts  try-to-cheat.ts
jogo-do-bicho/src/app/: layout.tsx
movie-review-program/: Anchor.toml  package-lock.json
movie-review-program/tests/: movie-review-program.ts
movie-review-v2/: README.md  package-lock.json  package.json
movie-review-v2/anchor/: Anchor.toml
solana-node-labs/: README.md  calculate-transfer-fee.ts  check-balance-from-address-or-domain.ts  check-balance.ts  generate-keypairs.ts  get-funds.ts  load-keypairs.ts  package-lock.json  package.json  send-ping-transaction.ts  transfer.ts
solana-send-frontend/: .gitignore  README.md  package-lock.json  package.json
solana-send-frontend/src/: App.tsx  main.tsx
(+25 files in other folders)
